--- a/hello.html
+++ b/hello.html
@@ -1,16 +1,73 @@
-<h1>歡迎來到我的網站！</h1>
-<p>這裡有很多有趣的內容。</p>
+<!DOCTYPE html>
+<html lang="en">
 
-<h1>我的寵物</h1>
-<img src="cat.png" alt="可愛的小貓">
-<p>這是我在網路上找到的！</p>
-<a href="https://fluv.com/blog/%E4%B9%9D%E5%80%8B%E8%AE%93%E8%B2%93%E5%92%AA%E5%96%9C%E6%AD%A1%E4%BD%A0%E7%9A%84%E5%B0%8F%E8%A8%A3%E7%AB%85%EF%BC%8C%E5%BF%AB%E4%BE%86%E7%9C%8B%E7%9C%8B%E4%BD%A0%E5%B7%B2%E7%B6%93%E7%9F%A5%E9%81%93/">點擊這裡查看更多</a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 自我介紹 -->
+    <title>Document</title>
+</head>
+
+<body>
+
+    <h1>
+        大家好
+    </h1>
+    <p>
+        我是淡江大學資管3c學生
+    </p>
+    <p>
+        我叫周朕聿
+    </p>
 
 
-<h1>我最喜歡的水果</h1>
-<ul>
-  <li>蘋果</li>
-  <li>香蕉</li>
-  <li>草莓</li>
-</ul>
-<p>這是我最愛吃的三種水果！</p>
+    <span>
+        學號是412637240
+    </span>
+<P>
+    <a href="https://www.im.tku.edu.tw/tw/">
+        這是系網
+    </a>
+</P>
+
+
+    <img src="cat.png" alt="">
+
+    <p>我的興趣</p>
+
+    <ul>
+        <li>籃球</li>
+        <li>聽音樂</li>
+        <li>看動漫</li>
+        <li>睡覺</li>
+    </ul>
+    
+    <p>我喜愛球員</p>
+
+    <ol>
+        <li>Lebron James</li>
+        <li>Shai Gilgeous-Alexander</li>
+        <li>Devin Booker</li>
+        <li>Tyrese Haliburton</li>
+    </ol>
+
+    <form action="/submit" method="post">
+        <label for="name">姓名:</label>
+        <input type="text" id="name" name="name">
+        <input type="submit" value="提交">
+    </form>
+
+
+    <table>
+        <tr>
+            <th>名稱</th>
+            <th>年齡</th>
+        </tr>
+        <tr>
+            <td>周朕聿</td>
+            <td>20</td>
+        </tr>
+    </table>
+</body>
+
+</html>
