--- a/hello.html
+++ b/hello.html
@@ -6,68 +6,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 自我介紹 -->
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-    <h1>
-        大家好
-    </h1>
-    <p>
-        我是淡江大學資管3c學生
-    </p>
-    <p>
-        我叫周朕聿
-    </p>
-
-
-    <span>
-        學號是412637240
-    </span>
-<P>
-    <a href="https://www.im.tku.edu.tw/tw/">
-        這是系網
-    </a>
-</P>
+    <header>
+        <h1>
+            大家好
+        </h1>
+    </header>
+    <main>
+        <section>
+            <p>
+                我是淡江大學資管3c學生
+            </p>
+            <p>
+                我叫周朕聿
+            </p>
 
 
-    <img src="cat.png" alt="">
-
-    <p>我的興趣</p>
-
-    <ul>
-        <li>籃球</li>
-        <li>聽音樂</li>
-        <li>看動漫</li>
-        <li>睡覺</li>
-    </ul>
-    
-    <p>我喜愛球員</p>
-
-    <ol>
-        <li>Lebron James</li>
-        <li>Shai Gilgeous-Alexander</li>
-        <li>Devin Booker</li>
-        <li>Tyrese Haliburton</li>
-    </ol>
-
-    <form action="/submit" method="post">
-        <label for="name">姓名:</label>
-        <input type="text" id="name" name="name">
-        <input type="submit" value="提交">
-    </form>
+            <span>
+                學號是412637240
+            </span>
+        </section>
+        <section>
+            <P>
+                <a href="https://www.im.tku.edu.tw/tw/">
+                    這是系網
+                </a>
+            </P>
 
 
-    <table>
-        <tr>
-            <th>名稱</th>
-            <th>年齡</th>
-        </tr>
-        <tr>
-            <td>周朕聿</td>
-            <td>20</td>
-        </tr>
-    </table>
+            <img src="cat.png" alt="">
+        </section>
+
+        <section>
+            <p>我的興趣</p>
+
+            <ul>
+                <li>籃球</li>
+                <li>聽音樂</li>
+                <li>看動漫</li>
+                <li>睡覺</li>
+            </ul>
+        </section>
+
+        <section>
+            <p>我喜愛球員</p>
+
+            <ol>
+                <li>Lebron James</li>
+                <li>Shai Gilgeous-Alexander</li>
+                <li>Devin Booker</li>
+                <li>Tyrese Haliburton</li>
+            </ol>
+        </section>
+
+        <form action="/submit" method="post">
+            <label for="name">姓名:</label>
+            <input type="text" id="name" name="name">
+            <input type="submit" value="提交">
+        </form>
+
+
+        <table>
+            <tr>
+                <th>名稱</th>
+                <th>年齡</th>
+            </tr>
+            <tr>
+                <td>周朕聿</td>
+                <td>20</td>
+            </tr>
+        </table>
+    </main>
 </body>
 
 </html>
