--- a/index.html
+++ b/index.html
@@ -5,93 +5,109 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Fractal by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Header -->
-			<header id="header">
+<head>
+	<title>網路程式設計作業</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
+
+<body class="is-preload">
+
+	<!-- Header -->
+	<header id="header">
+		<div class="content">
+			<h1><a href="#">大家好 我是周朕聿</a></h1>
+			<p>淡江大學資管系<br />
+				三年級<a href="http://html5up.net">C班</a></p>
+			<ul class="actions">
+				<li><a href="#" class="button primary icon solid fa-download">Download</a></li>
+				<li><a href="#one" class="button icon solid fa-chevron-down scrolly">Learn More</a></li>
+			</ul>
+		</div>
+		<div class="image phone">
+			<div class="inner"><img src="images/screen.jpg" alt="" /></div>
+		</div>
+	</header>
+
+	<!-- One -->
+	<section id="one" class="wrapper style2 special">
+		<header class="major">
+			<h2>網路程式設計課程<br />
+				Web Programming</h2>
+		</header>
+		<ul class="icons major">
+			<li><span class="icon solid fa-camera-retro"><span class="label">Shoot</span></span></li>
+			<li><span class="icon solid fa-sync"><span class="label">Process</span></span></li>
+			<li><span class="icon solid fa-cloud"><span class="label">Upload</span></span></li>
+		</ul>
+	</section>
+
+	<!-- Two -->
+	<section id="two" class="wrapper">
+		<div class="inner alt">
+			<section class="spotlight">
+				<div class="image"><img src="images/下載 (1).png" alt="" /></div>
 				<div class="content">
-					<h1><a href="#">Fractal</a></h1>
-					<p>Just a simple, single page responsive<br />
-					template brought to you by <a href="http://html5up.net">HTML5 UP</a></p>
-					<ul class="actions">
-						<li><a href="#" class="button primary icon solid fa-download">Download</a></li>
-						<li><a href="#one" class="button icon solid fa-chevron-down scrolly">Learn More</a></li>
-					</ul>
-				</div>
-				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
-			</header>
-
-		<!-- One -->
-			<section id="one" class="wrapper style2 special">
-				<header class="major">
-					<h2>Sed ipsum magna lorem tempus amet<br />
-					vehicula et gravida elementum</h2>
-				</header>
-				<ul class="icons major">
-					<li><span class="icon solid fa-camera-retro"><span class="label">Shoot</span></span></li>
-					<li><span class="icon solid fa-sync"><span class="label">Process</span></span></li>
-					<li><span class="icon solid fa-cloud"><span class="label">Upload</span></span></li>
-				</ul>
-			</section>
-
-		<!-- Two -->
-			<section id="two" class="wrapper">
-				<div class="inner alt">
-					<section class="spotlight">
-						<div class="image"><img src="images/pic01.jpg" alt="" /></div>
-						<div class="content">
-							<h3>Magna sed ultrices</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/pic02.jpg" alt="" /></div>
-						<div class="content">
-							<h3>Ultrices nullam aliquam</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
-						<div class="content">
-							<h3>Aliquam sed magna</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
-						</div>
-					</section>
-					<section class="special">
-						<ul class="icons labeled">
-							<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum lorem accumsan</span></span></li>
-							<li><span class="icon solid fa-sync"><span class="label">Sed vehicula elementum</span></span></li>
-							<li><span class="icon solid fa-cloud"><span class="label">Elit fusce consequat</span></span></li>
-							<li><span class="icon solid fa-code"><span class="label">Lorem nullam tempus</span></span></li>
-							<li><span class="icon solid fa-desktop"><span class="label">Adipiscing amet sapien</span></span></li>
-						</ul>
-					</section>
+					<h3>淡江大學</h3>
+					<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui
+						libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur
+						consequat lorem ipsum.</p>
 				</div>
 			</section>
-
-		<!-- Three -->
-			<section id="three" class="wrapper style2 special">
-				<header class="major">
-					<h2>Magna leo sapien gravida</h2>
-					<p>Gravida at leo elementum elit fusce accumsan dui libero, quis vehicula<br />
-					lectus ultricies eu. In convallis amet leo sapien iaculis efficitur.</p>
-				</header>
-				<ul class="actions special">
-					<li><a href="#" class="button primary icon solid fa-download">Download</a></li>
-					<li><a href="#" class="button">Learn More</a></li>
+			<section class="spotlight">
+				<div class="image"><img src="images/images.png" alt="" /></div>
+				<div class="content">
+					<h3>資訊管理學系</h3>
+					<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui
+						libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur
+						consequat lorem ipsum.</p>
+				</div>
+			</section>
+			<section class="spotlight">
+				<div class="image"><img src="images/4hbj-eymz1o-768x512.jpg" alt="" /></div>
+				<div class="content">
+					<h3>網頁程式設計課程</h3>
+					<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui
+						libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur
+						consequat lorem ipsum.</p>
+				</div>
+			</section>
+			<section class="special">
+				<ul class="icons labeled">
+					<li><span class="icon solid fa-camera-retro"><span class="label">拍照</span></span></li>
+					<li><span class="icon solid fa-sync"><span class="label">轉換</span></span></li>
+					<li><span class="icon solid fa-cloud"><span class="label">雲端</span></span></li>
+					<li><span class="icon solid fa-code"><span class="label">顧客</span></span></li>
+					<li><span class="icon solid fa-desktop"><span class="label">智慧</span></span></li>
 				</ul>
 			</section>
+		</div>
+	</section>
 
-		<!-- Four -->
-		<!--
+	<!-- Three -->
+	<section id="three" class="wrapper style2 special">
+		<header class="major">
+			<h2>我的作業</h2>
+			<p> <a href="http://127.0.0.1:5500/hello.html">
+					作業1
+				</a><br />
+				<a href="">
+					作業2
+				</a></p>
+		</header>
+		<ul class="actions special">
+			<li><a href="#" class="button primary icon solid fa-download">Download</a></li>
+			<li><a href="#" class="button">Learn More</a></li>
+		</ul>
+	</section>
+
+	<!-- Four -->
+	<!--
 			<section id="four" class="wrapper">
 				<div class="inner">
 
@@ -409,23 +425,24 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</section>
 		-->
 
-		<!-- Footer -->
-			<footer id="footer">
-				<ul class="icons">
-					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-				</ul>
-				<p class="copyright">&copy; Untitled. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
-			</footer>
+	<!-- Footer -->
+	<footer id="footer">
+		<ul class="icons">
+			<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+			<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+			<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+		</ul>
+		<p class="copyright">&copy; Untitled. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
+	</footer>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
