--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			</ul>
 		</div>
 		<div class="image phone">
-			<div class="inner"><img src="images/screen.jpg" alt="" /></div>
+			<div class="inner"><img src="images/cat.png" alt="" /></div>
 		</div>
 	</header>
 
@@ -54,27 +54,27 @@
 				<div class="image"><img src="images/下載 (1).png" alt="" /></div>
 				<div class="content">
 					<h3>淡江大學</h3>
-					<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui
-						libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur
-						consequat lorem ipsum.</p>
+					<p>淡江大學，簡稱淡大、淡江、TKU，學校全銜為「淡江大學學校財團法人淡江大學」，英譯名稱以「淡江」之臺語白話字「Tām-kang」作拼寫 。是一所位於新北市淡水區的私立綜合大學。</p>
 				</div>
 			</section>
 			<section class="spotlight">
 				<div class="image"><img src="images/images.png" alt="" /></div>
 				<div class="content">
 					<h3>資訊管理學系</h3>
-					<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui
-						libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur
-						consequat lorem ipsum.</p>
+					<p>本系系名為資訊管理學系，資訊管理領域的意涵在於：設計以資訊科技為基礎的服務系統與管理資訊科技資源，並從管理、組織與社會等面向探究資訊科技的使用，影響及其經濟性。
+
+					</p>
 				</div>
 			</section>
 			<section class="spotlight">
 				<div class="image"><img src="images/4hbj-eymz1o-768x512.jpg" alt="" /></div>
 				<div class="content">
 					<h3>網頁程式設計課程</h3>
-					<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui
-						libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur
-						consequat lorem ipsum.</p>
+					<p>本課程分為前端與後端兩部分，將系統性介紹前後端網頁開發技術。課程初期涵
+						蓋開發工具的安裝與設定、HTML語言的基礎與進階技巧及網頁內容的創建與設
+						計。前端程式設計部分集中於JavaScript，專注於動態效果與互動功能的實
+						作。課程後半段轉向後端程式設計，專注於Node.js，包括伺服器建設、數據庫操
+						作與API操作。每週均設有課堂作業，並於期末進行實作專案評量，以檢視學生對各階段內容的掌握程度。</p>
 				</div>
 			</section>
 			<section class="special">
@@ -96,7 +96,7 @@
 			<p> <a href="http://127.0.0.1:5500/hello.html">
 					作業1
 				</a><br />
-				<a href="">
+				<a href="http://127.0.0.1:5501/index.html">
 					作業2
 				</a></p>
 		</header>
